.env_/logs/dag_id=POSTGRES_CONNECTION/run_id=manual__2024-01-23T13:45:07.783015+00:00/task_id=load_data_to_postgres/attempt=4.log
[2024-01-23T13:51:12.606+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [queued]>
[2024-01-23T13:51:12.620+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [queued]>
[2024-01-23T13:51:12.621+0000] {taskinstance.py:2171} INFO - Starting attempt 4 of 6
[2024-01-23T13:51:12.639+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): load_data_to_postgres> on 2024-01-23 13:45:07.783015+00:00
[2024-01-23T13:51:12.644+0000] {standard_task_runner.py:60} INFO - Started process 3046 to run task
[2024-01-23T13:51:12.649+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'POSTGRES_CONNECTION', 'load_data_to_postgres', 'manual__2024-01-23T13:45:07.783015+00:00', '--job-id', '106', '--raw', '--subdir', 'DAGS_FOLDER/post_opertor.py', '--cfg-path', '/tmp/tmpxjjzpfh_']
[2024-01-23T13:51:12.652+0000] {standard_task_runner.py:88} INFO - Job 106: Subtask load_data_to_postgres
[2024-01-23T13:51:12.710+0000] {task_command.py:423} INFO - Running <TaskInstance: POSTGRES_CONNECTION.load_data_to_postgres manual__2024-01-23T13:45:07.783015+00:00 [running]> on host 48444e3206b7
[2024-01-23T13:51:12.803+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Rhon' AIRFLOW_CTX_DAG_ID='POSTGRES_CONNECTION' AIRFLOW_CTX_TASK_ID='load_data_to_postgres' AIRFLOW_CTX_EXECUTION_DATE='2024-01-23T13:45:07.783015+00:00' AIRFLOW_CTX_TRY_NUMBER='4' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-01-23T13:45:07.783015+00:00'
[2024-01-23T13:51:12.804+0000] {sql.py:276} INFO - Executing: 
        create table if not exists People ( id  integer ,
        name character , 
        phone charater
        primary key (id))
[2024-01-23T13:51:12.815+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2024-01-23T13:51:12.826+0000] {base.py:83} INFO - Using connection ID 'postgres' for task execution.
[2024-01-23T13:51:12.837+0000] {sql.py:432} INFO - Running statement: 
        create table if not exists People ( id  integer ,
        name character , 
        phone charater
        primary key (id)), parameters: None
[2024-01-23T13:51:12.840+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "("
LINE 5:         primary key (id))
                            ^

[2024-01-23T13:51:12.852+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=POSTGRES_CONNECTION, task_id=load_data_to_postgres, execution_date=20240123T134507, start_date=20240123T135112, end_date=20240123T135112
[2024-01-23T13:51:12.870+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 106 for task load_data_to_postgres (syntax error at or near "("
LINE 5:         primary key (id))
                            ^
; 3046)
[2024-01-23T13:51:12.903+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-01-23T13:51:12.924+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
